slider component styling (overflow) fix

--- a/src/scss/components/_slider.scss
+++ b/src/scss/components/_slider.scss
@@ -1,6 +1,11 @@
 .glide {
+  &__track {
+    overflow: visible !important;
+  }
+
   &__slides {
     padding-bottom: 5.9rem !important;
+    overflow: visible !important;
   }
 
   &__slide {
